# tpproject

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  button.cpp  button.h  geometry.cpp  geometry.h  main.cpp  run.sh
dacha/: Tree.h  dacha.cpp  dacha.h  house.cpp  house.h  object.h  tree.cpp  treeFactory.cpp
gometry/: circle.h  iShape.h  line.h  point.h  polygon.h  ray.h  segment.h  vector.h
gometry/src/: circle.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp
managers/: CottegeManager.h  Drawer.h  ShadowManager.h  cottegemanager.h  drawer.h  shadowmanager.h
managers/src/: CottegeManager.cpp  Drawer.cpp  ShadowManager.cpp  cottegemanager.cpp  drawer.cpp  shadowmanager.cpp
my_geometry/: CMakeLists.txt  Ellipse.h  IShape.h  Line.h  Point.h  Polygon.h  Ray.h  Segment.h  Vector.h  Zone_Point.h
my_geometry/src/: Ellipse.cpp  Line.cpp  Point.cpp  Polygon.cpp  Ray.cpp  Segment.cpp  Vector.cpp  Zone_Point.cpp
my_gometry/: ellipse.h  iShape.h  line.h  point.h  polygon.h  ray.h  segment.h  vector.h  zone_point.h
my_gometry/src/: ellipse.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp  zone_point.cpp
objects/: AppleFactory.h  AppleTree.h  Bush.h  BushFactory.h  CMakeLists.txt  CedarFactory.h  CedarTree.h  FirFactory.h  FirTree.h  House.h  HouseFactory.h  Object.h  Tree.h  TreeFactory.h  applefactory.h  appletree.h  cedarfactory.h  cedartree.h  firfactory.h  firtree.h  house.h  housefactory.h  object.h  tree.h  treefactory.h
objects/src/: AppleFactory.cpp  AppleTree.cpp  Bush.cpp  BushFactory.cpp  CedarFactory.cpp  CedarTree.cpp  FirFactory.cpp  FirTree.cpp  House.cpp  HouseFactory.cpp  Tree.cpp  TreeFactory.cpp  applefactory.cpp  appletree.cpp  cedarfactory.cpp  cedartree.cpp  firfactory.cpp  firtree.cpp  house.cpp  housefactory.cpp  tree.cpp  treefactory.cpp
shadow_strategy/: HardShadow.h  ShadowStrategy.h  SoftShadow.h
shadow_strategy/src/: HardShadow.cpp  ShadowStrategy.cpp  SoftShadow.cpp
tests/: test.sh  test1.txt  test2.txt  test3.txt
window/: Button.h  frontwindow.h  textinput.h  upview.h
window/src/: button.cpp  frontwindow.cpp  textinput.cpp  upview.cpp
